# PKT-CS-VT

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.py  sample_crowdstrike_sha.csv
src/pkt_cs_vt_pipeline/: __main__.py  config.py  data_utils.py  ngsiem.py  pipeline.py  queries.py  reporting.py  vt.py
src/pkt_cs_vt_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: report.html.j2
