[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pkt-cs-vt-pipeline"
version = "0.3.0"
description = "One-click CrowdStrike NGSIEM detection lookup with VirusTotal enrichment and Streamlit dashboard"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.36.0",
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "jinja2>=3.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
